force-app/main/default/objects/SRM_Metadata__c/SRM_Metadata__c.object-meta.xml
<CustomObject>
    <label>Metadata</label>
    <nameField>
        <displayFormat>MDT-{000000000}</displayFormat>
        <label>Metadata Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>