force-app/main/default/objects/SRM_Metadata__c/fields/Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Type__c</fullName>
    <label>Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand new metadata</fullName>
                <default>true</default>
                <label>Brand new metadata</label>
            </value>
            <value>
                <fullName>Existing, updated metadata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>