force-app/main/default/objects/SRM_Metadata__c/fields/Jira_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Jira_Ticket__c</fullName>
    <description>The Jira Ticket (story, bug, etc.) that this metadata is relevant to.</description>
    <inlineHelpText>The Jira Ticket (story, bug, etc.) that this metadata is relevant to.</inlineHelpText>
    <label>Jira Ticket</label>
    <referenceTo>SRM_Jira_Ticket__c</referenceTo>
    <relationshipLabel>Relevant Metadata</relationshipLabel>
    <relationshipName>Metadata</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>