force-app/main/default/objects/SRM_Metadata__c/fields/Referenced_in__c.field-meta.xml
<CustomField>
    <fullName>Referenced_in__c</fullName>
    <label>Referenced in</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>