force-app/main/default/objects/SRM_Metadata__c/fields/Referenced_in_another_ticket__c.field-meta.xml
<CustomField>
    <fullName>Referenced_in_another_ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This metadata is referenced in another ticket under the same Sprint. It might be worth reaching out to the ticket owner to avoid merge conflicts.</inlineHelpText>
    <label>Referenced in another ticket</label>
    <type>Checkbox</type>
</CustomField>