force-app/main/default/objects/SRM_Metadata__c/fields/Sprint_Id__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Id__c</fullName>
    <formula>Jira_Ticket__r.CRM_Sprint__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprint Id</label>
    <type>Text</type>
</CustomField>